handle destructive colouring

--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Frigate Notifications (0.14.0.3c)
+  name: Frigate Notifications (0.14.0.3d)
   author: SgtBatten
   homeassistant:
     min_version: 2024.11.0
@@ -732,12 +732,6 @@ blueprint:
           name: Action Button 1 icon - iOS Only
           description: Customise the Icon on the first Action Button. Only the iOS SFSymbols library is supported, not mdi:icons. e.g., sfsymbols:bell
           default: ""
-        destructive_1:
-          name: Action Button 1 Destructive
-          description: Does pressing the action button close the notification on your mobile device. 
-          default: false
-          selector:
-            boolean:
         button_2:
           name: Action Button 2 Text
           description: "The text used on the second Action button at the bottom of the notification. Set the URL below."
@@ -778,12 +772,6 @@ blueprint:
           name: Action Button 2 icon - iOS Only
           description: Customise the Icon on the second Action Button. Only the iOS SFSymbols library is supported, not mdi:icons. e.g., sfsymbols:bell
           default: ""
-        destructive_2:
-          name: Action Button 2 Destructive
-          description: Does pressing the action button close the notification on your mobile device. 
-          default: false
-          selector:
-            boolean:
         button_3:
           name: Action Button 3 Text
           description: "The text used on the third Action button at the bottom of the notification. Set the URL below."
@@ -824,12 +812,6 @@ blueprint:
           name: Action Button 3 icon - iOS Only
           description: Customise the Icon on the third Action Button. Only the iOS SFSymbols library is supported, not mdi:icons. e.g., sfsymbols:bell
           default: ""
-        destructive_3:
-          name: Action Button 3 Destructive
-          description: Does pressing the action button close the notification on your mobile device. 
-          default: false
-          selector:
-            boolean:
         custom_action_manual:
           name: Custom Action (Manual Trigger)
           description: Customisable action that you can trigger with the Custom Action buttons in the notification. Select Custom Action on any Action Button above.
@@ -1327,17 +1309,17 @@ actions:
                                       title: "{{button_1}}"
                                       uri: "{{url_1}}"
                                       icon: "{{icon_1}}"
-                                      destructive: "{{destructive_1}}"
+                                      destructive: "{{'/' in url_1}}"
                                     - action: "{{ 'URI' if '/' in url_2 else url_2 }}"
                                       title: "{{button_2}}"
                                       uri: "{{url_2}}"
                                       icon: "{{icon_2}}"
-                                      destructive: "{{destructive_2}}"
+                                      destructive: "{{'/' in url_2}}"
                                     - action: "{{ 'URI' if '/' in url_3 else url_3 }}"
                                       title: "{{button_3}}"
                                       uri: "{{url_3}}"
                                       icon: "{{icon_3}}"
-                                      destructive: "{{destructive_3}}"
+                                      destructive: "{{'/' in url_3}}"
                           - conditions: "{{ tv }}"
                             sequence:
                               - action: "notify.{{ notify_group_target }}"
@@ -1385,17 +1367,17 @@ actions:
                                         title: "{{button_1}}"
                                         uri: "{{url_1}}"
                                         icon: "{{icon_1}}"
-                                        destructive: "{{destructive_1}}"
+                                        destructive: "{{'/' in url_1}}"
                                       - action: "{{ 'URI' if '/' in url_2 else url_2 }}"
                                         title: "{{button_2}}"
                                         uri: "{{url_2}}"
                                         icon: "{{icon_2}}"
-                                        destructive: "{{destructive_2}}"
+                                        destructive: "{{'/' in url_2}}"
                                       - action: "{{ 'URI' if '/' in url_3 else url_3 }}"
                                         title: "{{button_3}}"
                                         uri: "{{url_3}}"
                                         icon: "{{icon_3}}"
-                                        destructive: "{{destructive_3}}"
+                                        destructive: "{{'/' in url_3}}"
                         default:
                           - action: "notify.{{ notify_group_target }}"
                             data:
@@ -1440,17 +1422,17 @@ actions:
                                     title: "{{button_1}}"
                                     uri: "{{url_1}}"
                                     icon: "{{icon_1}}"
-                                    destructive: "{{destructive_1}}"
+                                    destructive: "{{'/' in url_1}}"
                                   - action: "{{ 'URI' if '/' in url_2 else url_2 }}"
                                     title: "{{button_2}}"
                                     uri: "{{url_2}}"
                                     icon: "{{icon_2}}"
-                                    destructive: "{{destructive_2}}"
+                                    destructive: "{{'/' in url_2}}"
                                   - action: "{{ 'URI' if '/' in url_3 else url_3 }}"
                                     title: "{{button_3}}"
                                     uri: "{{url_3}}"
                                     icon: "{{icon_3}}"
-                                    destructive: "{{destructive_3}}"
+                                    destructive: "{{'/' in url_3}}"
                       - if: "{{tts and (not tts_helper or not alert_once or (tts_helper and id not in states(tts_helper)))}}"
                         then:
                           sequence:
@@ -1803,17 +1785,17 @@ actions:
                                             title: "{{button_1}}"
                                             uri: "{{url_1}}"
                                             icon: "{{icon_1}}"
-                                            destructive: "{{destructive_1}}"
+                                            destructive: "{{'/' in url_1}}"
                                           - action: "{{ 'URI' if '/' in url_2 else url_2 }}"
                                             title: "{{button_2}}"
                                             uri: "{{url_2}}"
                                             icon: "{{icon_2}}"
-                                            destructive: "{{destructive_2}}"
+                                            destructive: "{{'/' in url_2}}"
                                           - action: "{{ 'URI' if '/' in url_3 else url_3 }}"
                                             title: "{{button_3}}"
                                             uri: "{{url_3}}"
                                             icon: "{{icon_3}}"
-                                            destructive: "{{destructive_3}}"
+                                            destructive: "{{'/' in url_3}}"
                                 - conditions: "{{ tv }}"
                                   sequence:
                                     - action: "notify.{{ notify_group_target }}"
@@ -1862,17 +1844,17 @@ actions:
                                               title: "{{button_1}}"
                                               uri: "{{url_1}}"
                                               icon: "{{icon_1}}"
-                                              destructive: "{{destructive_1}}"
+                                              destructive: "{{'/' in url_1}}"
                                             - action: "{{ 'URI' if '/' in url_2 else url_2 }}"
                                               title: "{{button_2}}"
                                               uri: "{{url_2}}"
                                               icon: "{{icon_2}}"
-                                              destructive: "{{destructive_2}}"
+                                              destructive: "{{'/' in url_2}}"
                                             - action: "{{ 'URI' if '/' in url_3 else url_3 }}"
                                               title: "{{button_3}}"
                                               uri: "{{url_3}}"
                                               icon: "{{icon_3}}"
-                                              destructive: "{{destructive_3}}"
+                                              destructive: "{{'/' in url_3}}"
                               default:
                                 - action: "notify.{{ notify_group_target }}"
                                   data:
@@ -1918,17 +1900,17 @@ actions:
                                           title: "{{button_1}}"
                                           uri: "{{url_1}}"
                                           icon: "{{icon_1}}"
-                                          destructive: "{{destructive_1}}"
+                                          destructive: "{{'/' in url_1}}"
                                         - action: "{{ 'URI' if '/' in url_2 else url_2 }}"
                                           title: "{{button_2}}"
                                           uri: "{{url_2}}"
                                           icon: "{{icon_2}}"
-                                          destructive: "{{destructive_2}}"
+                                          destructive: "{{'/' in url_2}}"
                                         - action: "{{ 'URI' if '/' in url_3 else url_3 }}"
                                           title: "{{button_3}}"
                                           uri: "{{url_3}}"
                                           icon: "{{icon_3}}"
-                                          destructive: "{{destructive_3}}"
+                                          destructive: "{{'/' in url_3}}"
 
                             - if: "{{tts and (not tts_helper or not alert_once or (tts_helper and id not in states(tts_helper)))}}"
                               then:
