reverse destructive logic

--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -1309,17 +1309,17 @@ actions:
                                       title: "{{button_1}}"
                                       uri: "{{url_1}}"
                                       icon: "{{icon_1}}"
-                                      destructive: "{{'/' in url_1}}"
+                                      destructive: "{{not '/' in url_1}}"
                                     - action: "{{ 'URI' if '/' in url_2 else url_2 }}"
                                       title: "{{button_2}}"
                                       uri: "{{url_2}}"
                                       icon: "{{icon_2}}"
-                                      destructive: "{{'/' in url_2}}"
+                                      destructive: "{{not '/' in url_2}}"
                                     - action: "{{ 'URI' if '/' in url_3 else url_3 }}"
                                       title: "{{button_3}}"
                                       uri: "{{url_3}}"
                                       icon: "{{icon_3}}"
-                                      destructive: "{{'/' in url_3}}"
+                                      destructive: "{{not '/' in url_3}}"
                           - conditions: "{{ tv }}"
                             sequence:
                               - action: "notify.{{ notify_group_target }}"
@@ -1367,17 +1367,17 @@ actions:
                                         title: "{{button_1}}"
                                         uri: "{{url_1}}"
                                         icon: "{{icon_1}}"
-                                        destructive: "{{'/' in url_1}}"
+                                        destructive: "{{not '/' in url_1}}"
                                       - action: "{{ 'URI' if '/' in url_2 else url_2 }}"
                                         title: "{{button_2}}"
                                         uri: "{{url_2}}"
                                         icon: "{{icon_2}}"
-                                        destructive: "{{'/' in url_2}}"
+                                        destructive: "{{not '/' in url_2}}"
                                       - action: "{{ 'URI' if '/' in url_3 else url_3 }}"
                                         title: "{{button_3}}"
                                         uri: "{{url_3}}"
                                         icon: "{{icon_3}}"
-                                        destructive: "{{'/' in url_3}}"
+                                        destructive: "{{not '/' in url_3}}"
                         default:
                           - action: "notify.{{ notify_group_target }}"
                             data:
@@ -1422,17 +1422,17 @@ actions:
                                     title: "{{button_1}}"
                                     uri: "{{url_1}}"
                                     icon: "{{icon_1}}"
-                                    destructive: "{{'/' in url_1}}"
+                                    destructive: "{{not '/' in url_1}}"
                                   - action: "{{ 'URI' if '/' in url_2 else url_2 }}"
                                     title: "{{button_2}}"
                                     uri: "{{url_2}}"
                                     icon: "{{icon_2}}"
-                                    destructive: "{{'/' in url_2}}"
+                                    destructive: "{{not '/' in url_2}}"
                                   - action: "{{ 'URI' if '/' in url_3 else url_3 }}"
                                     title: "{{button_3}}"
                                     uri: "{{url_3}}"
                                     icon: "{{icon_3}}"
-                                    destructive: "{{'/' in url_3}}"
+                                    destructive: "{{not '/' in url_3}}"
                       - if: "{{tts and (not tts_helper or not alert_once or (tts_helper and id not in states(tts_helper)))}}"
                         then:
                           sequence:
@@ -1785,17 +1785,17 @@ actions:
                                             title: "{{button_1}}"
                                             uri: "{{url_1}}"
                                             icon: "{{icon_1}}"
-                                            destructive: "{{'/' in url_1}}"
+                                            destructive: "{{not '/' in url_1}}"
                                           - action: "{{ 'URI' if '/' in url_2 else url_2 }}"
                                             title: "{{button_2}}"
                                             uri: "{{url_2}}"
                                             icon: "{{icon_2}}"
-                                            destructive: "{{'/' in url_2}}"
+                                            destructive: "{{not '/' in url_2}}"
                                           - action: "{{ 'URI' if '/' in url_3 else url_3 }}"
                                             title: "{{button_3}}"
                                             uri: "{{url_3}}"
                                             icon: "{{icon_3}}"
-                                            destructive: "{{'/' in url_3}}"
+                                            destructive: "{{not '/' in url_3}}"
                                 - conditions: "{{ tv }}"
                                   sequence:
                                     - action: "notify.{{ notify_group_target }}"
@@ -1844,17 +1844,17 @@ actions:
                                               title: "{{button_1}}"
                                               uri: "{{url_1}}"
                                               icon: "{{icon_1}}"
-                                              destructive: "{{'/' in url_1}}"
+                                              destructive: "{{not '/' in url_1}}"
                                             - action: "{{ 'URI' if '/' in url_2 else url_2 }}"
                                               title: "{{button_2}}"
                                               uri: "{{url_2}}"
                                               icon: "{{icon_2}}"
-                                              destructive: "{{'/' in url_2}}"
+                                              destructive: "{{not '/' in url_2}}"
                                             - action: "{{ 'URI' if '/' in url_3 else url_3 }}"
                                               title: "{{button_3}}"
                                               uri: "{{url_3}}"
                                               icon: "{{icon_3}}"
-                                              destructive: "{{'/' in url_3}}"
+                                              destructive: "{{not '/' in url_3}}"
                               default:
                                 - action: "notify.{{ notify_group_target }}"
                                   data:
@@ -1900,17 +1900,17 @@ actions:
                                           title: "{{button_1}}"
                                           uri: "{{url_1}}"
                                           icon: "{{icon_1}}"
-                                          destructive: "{{'/' in url_1}}"
+                                          destructive: "{{not '/' in url_1}}"
                                         - action: "{{ 'URI' if '/' in url_2 else url_2 }}"
                                           title: "{{button_2}}"
                                           uri: "{{url_2}}"
                                           icon: "{{icon_2}}"
-                                          destructive: "{{'/' in url_2}}"
+                                          destructive: "{{not '/' in url_2}}"
                                         - action: "{{ 'URI' if '/' in url_3 else url_3 }}"
                                           title: "{{button_3}}"
                                           uri: "{{url_3}}"
                                           icon: "{{icon_3}}"
-                                          destructive: "{{'/' in url_3}}"
+                                          destructive: "{{not '/' in url_3}}"
 
                             - if: "{{tts and (not tts_helper or not alert_once or (tts_helper and id not in states(tts_helper)))}}"
                               then:
